--- a/i18n/zh/docusaurus-theme-classic/navbar.json
+++ b/i18n/zh/docusaurus-theme-classic/navbar.json
@@ -1,22 +1,22 @@
 {
   "item.label.Center": {
-    "message": "学习中心",
+    "message": "学习中心22",
     "description": "Navbar item with label Center"
   },
   "item.label.Solidity101": {
-    "message": "Solidity入门",
-    "description": "Navbar item with label Solidity入门"
+    "message": "polkadotjs脚本",
+    "description": "Navbar item with label polkadot.js"
   },
   "item.label.Solidity102": {
-    "message": "Solidity进阶",
-    "description": "Navbar item with label Solidity进阶"
+    "message": "polkadot智能合约ink",
+    "description": "Navbar item with label 智能合约ink"
   },
   "item.label.Solidity103": {
     "message": "Solidity应用",
     "description": "Navbar item with label Solidity应用"
   },
   "item.label.Forum": {
-    "message": "论坛",
+    "message": "论2坛44466",
     "description": "Navbar item with label 论坛"
   }
 }
