add some describ

--- a/i18n/zh/docusaurus-plugin-content-docs-solidity-start/current/01_HelloWeb3/readme.mdx
+++ b/i18n/zh/docusaurus-plugin-content-docs-solidity-start/current/01_HelloWeb3/readme.mdx
@@ -1,5 +1,5 @@
 ---
-title: 1. HelloWeb3 (三行代码)
+title: 1. HelloPolkadot
 tags:
   - solidity
   - basic
@@ -10,15 +10,15 @@ import QuizProgress from '@site/src/components/QuizProgress';
 import QuizForm from '@site/src/components/QuizForm';
 import { SOLIDITY_COURSE_ID, SOLIDITY_BASIC_LESSON_ID_1 } from '@site/src/constants/course';
 
-# Solidity极简入门: 1. HelloWeb3 (三行代码)
+# polkadot.js入门: 1. HelloPolkadot 
 
 <QuizProgress courseId={SOLIDITY_COURSE_ID} lessonId={SOLIDITY_BASIC_LESSON_ID_1}></QuizProgress>
 
-我最近在重新学solidity，巩固一下细节，也写一个“Solidity极简入门”，供小白们使用（编程大佬可以另找教程），每周更新1-3讲。
+我最近??在重新学solidity，巩固一下细节，也写一个“Solidity极简入门”，供小白们使用（编程大佬可以另找教程），每周更新1-3讲。
 
-欢迎关注我的推特：[@0xAA_Science](https://twitter.com/0xAA_Science)
+欢迎关注我的推特：[@](https://twitter.com/)
 
-WTF技术社群discord，内有加微信群方法：[链接](https://discord.gg/5akcruXrsk)
+
 
 所有代码和教程开源在github（1024个star发课程认证，2048个star发社群NFT）: [github.com/AmazingAng/WTFSolidity](https://github.com/AmazingAng/WTFSolidity)
 
@@ -100,9 +100,8 @@ contract Quiz1{
 ## 总结
 这一讲，我们简单介绍了`solidity`，`remix`工具，并完成了第一个`solidity`程序--`HelloWeb3`。下面我们将继续`solidity`旅程！
 
-### 中文solidity资料推荐：
-1. [Solidity中文文档](https://solidity-cn.readthedocs.io/zh/develop/introduction-to-smart-contracts.html)（官方文档的中文翻译）
+### 资料推荐：
+1. [polkadot.js官方资料](https://polkadot.js.org/docs/)
 
-2. [崔棉大师solidity教程](https://space.bilibili.com/286084162) web3技术教学博主，我看他视频学到了很多 
 
 <QuizForm courseId={SOLIDITY_COURSE_ID} lessonId={SOLIDITY_BASIC_LESSON_ID_1}></QuizForm>
