--- a/i18n/zh/code.json
+++ b/i18n/zh/code.json
@@ -311,7 +311,7 @@
     "description": "The title of the goals section"
   },
   "home.goals.desc": {
-    "message": "为Web3培养10,000个开发者",
+    "message": "激活波卡生态",
     "description": "The title of the first goal"
   },
   "home.goals.1": {
