--- a/i18n/zh/docusaurus-plugin-content-docs-polkadot-js-start/current/readme.mdx
+++ b/i18n/zh/docusaurus-plugin-content-docs-polkadot-js-start/current/readme.mdx
@@ -7,8 +7,8 @@ slug: /
 
 import { PageMetadata } from "@docusaurus/theme-common";
 
-# Solidity入门
-### 学习Solidity基础内容，开始智能合约之旅！基于[WTF Solidity极简教程](https://github.com/AmazingAng/WTF-Solidity)前15讲。
+# polkadot.js入门
+### 学习polkadot.js基础内容，愉快地和波卡生态进行交互！基于[Simple Tutorial极简教程](https://github.com/NeoSmithX/simple_tutorial_polkadot_js)基础部分。
 <PageMetadata
   title="Solidity入门"
   description="学习Solidity基础内容，开始智能合约之旅！"
